--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,12 @@ name: Build and Package with Nuitka
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**/*.py'
   pull_request:
     branches: [ main ]
+    paths:
+      - '**/*.py'
 
 jobs:
   build:
