added input for majo minor and path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,17 @@ name: Manual Build and Release with Nuitka
 
 on:
   workflow_dispatch:
+    inputs:
+      bump:
+        description: 'Version bump type'
+        required: true
+        default: 'patch'
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+
 
 permissions:
   contents: write  # Required to create tags and releases
@@ -35,7 +46,22 @@ jobs:
 
           BASE_VERSION=$(echo $OLD_TAG | sed 's/^v//')
           IFS='.' read -r MAJOR MINOR PATCH <<< "$BASE_VERSION"
-          PATCH=$((PATCH + 1))
+
+          case "${{ github.event.inputs.bump }}" in
+            patch)
+              PATCH=$((PATCH + 1))
+              ;;
+            minor)
+              MINOR=$((MINOR + 1))
+              PATCH=0
+              ;;
+            major)
+              MAJOR=$((MAJOR + 1))
+              MINOR=0
+              PATCH=0
+              ;;
+          esac
+
           NEW_VERSION="v$MAJOR.$MINOR.$PATCH"
 
           if git rev-parse "$NEW_VERSION" >/dev/null 2>&1; then
