--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Manual Build and Release with Nuitka
+name: Build with Nuitka in Docker
 
 on:
   workflow_dispatch:
@@ -13,30 +13,18 @@ on:
           - minor
           - major
 
-
 permissions:
-  contents: write  # Required to create tags and releases
+  contents: write
 
 jobs:
-  build-release:
-    runs-on: self-hosted
+  build-in-docker:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           fetch-tags: true
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install Nuitka and Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install nuitka
-          pip install -r requirements.txt
 
       - name: Get latest tag and bump version
         id: versioning
@@ -80,9 +68,21 @@ jobs:
           VERSION=${{ env.NEW_VERSION }}
           sed -i "s/^CURRENT_VERSION = .*/CURRENT_VERSION = \"$VERSION\"/" updater.py
 
-      - name: Compile with Nuitka
+      - name: Build in Docker (Debian Bullseye)
         run: |
-          nuitka --standalone --onefile --output-dir=dist --output-filename=uw main.py
+          docker run --rm -v ${{ github.workspace }}:/app -w /app python:3.12-bullseye bash -c "
+            apt-get update &&
+            apt-get install -y gcc g++ libffi-dev python3-dev &&
+            pip install --upgrade pip &&
+            pip install nuitka &&
+            nuitka --standalone --onefile --output-dir=dist --output-filename=uw main.py
+          "
+
+      - name: Upload Binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: uw
+          path: dist/uw
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
