--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
             apt-get update &&
             apt-get install -y gcc g++ libffi-dev python3-dev patchelf &&
             pip install --upgrade pip &&
-            pip install nuitka &&
+            pip install -r requirements.txt &&
             nuitka --standalone --onefile --output-dir=dist --output-filename=uw main.py
           "
 
