--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,10 +72,10 @@ jobs:
         run: |
           docker run --rm -v ${{ github.workspace }}:/app -w /app python:3.12-bullseye bash -c "
             apt-get update &&
-            apt-get install -y gcc g++ libffi-dev python3-dev patchelf &&
+            apt-get install -y gcc g++ libffi-dev python3-dev patchelf make &&
             pip install --upgrade pip &&
             pip install -r requirements.txt &&
-            nuitka --standalone --onefile --output-dir=dist --output-filename=uw main.py
+            make
           "
 
       - name: Upload Binary
