--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
             apt-get install -y gcc g++ libffi-dev python3-dev patchelf make &&
             pip install --upgrade pip &&
             pip install -r requirements.txt &&
-            make
+            make pyinstaller
           "
 
       - name: Upload Binary
