--- a/.github/workflows/build-pyinst.yaml
+++ b/.github/workflows/build-pyinst.yaml
@@ -75,17 +75,17 @@ jobs:
             apt-get install -y gcc g++ libffi-dev python3-dev patchelf make &&
             pip install --upgrade pip &&
             pip install -r requirements.txt &&
-            make
+            make pyinstaller
           "
 
       - name: Upload Binary
         uses: actions/upload-artifact@v4
         with:
           name: uw
-          path: dist/uw
+          path: /build-pyinstaller/bin/uw
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.NEW_VERSION }}
-          files: dist/uw
+          files: /build-pyinstaller/bin/uw
